<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="payClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ui.dashboard.DashboardFragment"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <!--头部toolbar-->
        <RelativeLayout
            android:id="@+id/cart_title_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/certainBlue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/shopping_cart"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <!--商品listView-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none" />

        <!--底端操作栏-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_show_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/total"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_settlement"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/certainBlue"
                android:gravity="center"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:onClickListener="@{payClickListener}"/>
        </LinearLayout>


    </LinearLayout>
</layout>