<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical"
    tools:viewBindingIgnore="true">
    <RelativeLayout
        android:id="@+id/login_title_layout"
        android:layout_height="65dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@color/certainBlue"
        tools:viewBindingIgnore="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

    </RelativeLayout>
    <ScrollView
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="25dp"
            android:paddingRight="24dp">

            <ImageView
                android:id="@+id/person_head"
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/avator"/>

            <!--账号 标签-->
            <LinearLayout
                android:layout_marginTop="58dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_username_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_username"
                    android:inputType="number"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="58dp"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_pwd"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <Button
                android:id="@+id/register_register_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/register"
                android:textColor="@color/white">
            </Button>

            <Button
                android:id="@+id/register_goBack_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:text="@string/go_back"
                android:textColor="@color/white">
            </Button>

        </LinearLayout>
    </ScrollView>


</LinearLayout>